--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://GelaLela.github.io/holoweb",
-  "name": "hololive-portfolio",
+  "name": "holoweb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
