--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://GelaLela.github.io/holoweb",
+  "homepage": "https://GelaLela.github.io/holoweb/",
   "name": "holoweb",
   "version": "0.1.0",
   "private": true,
